feat(feeds): feed management API (#2)
## Description

- stop managing sources directly from the client REST API (e.g.
creation)
- add feed-based endpoints for retrieving feed config, activities and
summary
- sources are managed automatically by the feed registry service
- add `TypedUID` interface and struct implementations for easier UID
parsing
