# pkg/sources/activities/types/types.go
@@ -10,14 +10,21 @@ type Activity interface {
 	json.Unmarshaler
 	// UID is the unique identifier for the activity.
 	// It should not contain any slashes.
-	UID() string
-	SourceUID() string
-	SourceType() string
+	UID() TypedUID
+	SourceUID() TypedUID
 	Title() string
 	Body() string
 	URL() string
 	ImageURL() string
 	CreatedAt() time.Time
+}
+
+// TypedUID is a semi-structured ID format for easy resource type extraction.
+type TypedUID interface {
+	json.Marshaler
+	json.Unmarshaler
+	Type() string
+	String() string
 }
 
 type ActivitySummary struct {
@@ -35,6 +42,7 @@ type DecoratedActivity struct {
 type ActivitiesSummary struct {
 	Overview   string
 	Highlights []ActivityHighlight
+	CreatedAt  time.Time
 }
 
 type ActivityHighlight struct {
@@ -54,8 +62,8 @@ type SearchRequest struct {
 	// MinSimilarity filters out entries with lower vector embedding similarity
 	MinSimilarity float32
 	// SourceUIDs ignored if empty
-	SourceUIDs []string
-	// Limit maximum number of results to return
+	SourceUIDs []TypedUID
+	// Limit the maximum number of results to return
 	Limit int
 	// SortBy specifies the field to sort results by (similarity or date)
 	SortBy SortBy
