# pkg/storage/postgres/ent/schema/feed.go
@@ -1,0 +1,30 @@
+package schema
+
+import (
+	"entgo.io/ent"
+	"entgo.io/ent/schema/field"
+	activities "github.com/glanceapp/glance/pkg/sources/activities/types"
+)
+
+type Feed struct {
+	ent.Schema
+}
+
+func (Feed) Fields() []ent.Field {
+	return []ent.Field{
+		field.String("id").Unique(),
+		field.String("user_id"),
+		field.String("name"),
+		field.String("icon"),
+		field.String("query"),
+		field.Bool("public"),
+		field.JSON("source_uids", []string{}),
+		field.Time("created_at"),
+		field.Time("updated_at"),
+		field.JSON("summary", activities.ActivitiesSummary{}).Optional(),
+	}
+}
+
+func (Feed) Edges() []ent.Edge {
+	return nil
+}
